<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tv_12"
            android:layout_marginRight="@dimen/tv_12"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_my_ads"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/border_bottom"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/tv_10"
                    android:paddingRight="@dimen/tv_10"
                    android:src="@drawable/ic_ads"
                    android:tint="@color/divider" />

                <TextView
                    android:id="@+id/tv_my_ads"
                    style="@style/lblRegular"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/menu_title_6"
                    android:textColor="@color/divider"
                    android:textSize="@dimen/sp_15" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_advterus"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/border_bottom"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/tv_10"
                    android:paddingRight="@dimen/tv_10"
                    android:src="@drawable/ic_ads"
                    android:tint="@color/divider" />

                <TextView
                    android:id="@+id/tv_advterus"
                    style="@style/lblRegular"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/menu_title_7"
                    android:textColor="@color/divider"
                    android:textSize="@dimen/sp_15" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_notify"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/border_bottom"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/tv_10"
                    android:paddingRight="@dimen/tv_10"
                    android:src="@drawable/ic_notify"
                    android:tint="@color/divider" />

                <TextView
                    android:id="@+id/tv_notify"
                    style="@style/lblRegular"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/menu_title_8"
                    android:textColor="@color/divider"
                    android:textSize="@dimen/sp_15" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_aboutus"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/border_bottom"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/tv_10"
                    android:paddingRight="@dimen/tv_10"
                    android:src="@drawable/ic_about_us"
                    android:tint="@color/divider" />

                <TextView
                    android:id="@+id/tv_aboutus"
                    style="@style/lblRegular"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/menu_title_9"
                    android:textColor="@color/divider"
                    android:textSize="@dimen/sp_15" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_tc"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/border_bottom"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/tv_10"
                    android:paddingRight="@dimen/tv_10"
                    android:src="@drawable/ic_tnc" />

                <TextView
                    android:id="@+id/tv_tc"
                    style="@style/lblRegular"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/menu_title_10"
                    android:textColor="@color/divider"
                    android:textSize="@dimen/sp_15" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_privacypolicy"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/border_bottom"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/tv_10"
                    android:paddingRight="@dimen/tv_10"
                    android:src="@drawable/ic_privacy" />

                <TextView
                    android:id="@+id/tv_privacypolicy"
                    style="@style/lblRegular"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/menu_title_11"
                    android:textColor="@color/divider"
                    android:textSize="@dimen/sp_15" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_setting"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/border_bottom"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/tv_10"
                    android:paddingRight="@dimen/tv_10"
                    android:src="@drawable/ic_setting" />

                <TextView
                    android:id="@+id/tv_setting"
                    style="@style/lblRegular"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/menu_title_12"
                    android:textColor="@color/divider"
                    android:textSize="@dimen/sp_15" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_logout"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/tv_10"
                    android:paddingRight="@dimen/tv_10"
                    android:src="@drawable/ic_logout" />

                <TextView
                    android:id="@+id/tv_logout"
                    style="@style/lblRegular"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/menu_title_13"
                    android:textColor="@color/divider"
                    android:textSize="@dimen/sp_15" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>